--- a/boilerplate_frontend/src/styles/global.less
+++ b/boilerplate_frontend/src/styles/global.less
@@ -1,4 +1,4 @@
-@import '~antd/es/style/themes/default.less';
+@import '~antd/dist/antd.less';
 @import (reference) './index.less';
 
 h1, h2, h3, h4, h5, h6 {
@@ -9,6 +9,14 @@ h1, h2, h3, h4, h5, h6 {
 .contentCenter{
     display: flex;
     justify-content: center;
+}
+.centerHrVR{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.heightFull{
+    height: 100vh;
 }
 .authForm{
     min-height: '100vh';
@@ -30,13 +38,27 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-.sidebar{
-    .ant-menu-inline {
-        .ant-menu-item::after{
-            border-right: 0;
-        }
-    }
-    .ant-menu-item-selected{
-        border-right: 3px solid @primary-color;
-    }
+#components-layout-demo-custom-trigger{
+    height: 100vh;
 }
+#components-layout-demo-custom-trigger .trigger {
+    padding: 0 24px;
+    font-size: 18px;
+    line-height: 64px;
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+  
+  #components-layout-demo-custom-trigger .trigger:hover {
+    color: #1890ff;
+  }
+  
+  #components-layout-demo-custom-trigger .logo {
+    height: 32px;
+    margin: 16px;
+    background: rgba(255, 255, 255, 0.3);
+  }
+  
+  .site-layout .site-layout-background {
+    background: #fff;
+  }
